--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "bootstrap": "npm ci && lerna bootstrap",
     "link": "lerna link",
     "lint": "lerna run lint --stream",
-    "format": "lerna exec -- prettier {src,test}/**/*.{ts,js,scss,html} --check",
-    "format:write": "lerna exec -- prettier {src,test}/**/*.{ts,js,scss,html} --write",
+    "format": "lerna exec -- prettier . --check",
+    "format:write": "lerna exec -- prettier . --write",
     "set-versions": "lerna version --exact --no-push --no-git-tag-version",
     "publish": "lerna publish --yes --no-verify-access from-package",
     "build:commons": "lerna run --stream --scope @mockoon/commons build",
