--- a/packages/desktop/test/data/res/import-openapi/samples/giphy-v2.yaml
+++ b/packages/desktop/test/data/res/import-openapi/samples/giphy-v2.yaml
@@ -666,7 +666,7 @@ definitions:
         type: integer
     type: object
   User:
-    description: 'The User Object contains information about the user associated with a GIF and URLs to assets such as that user''s avatar image, profile, and more.'
+    description: "The User Object contains information about the user associated with a GIF and URLs to assets such as that user's avatar image, profile, and more."
     properties:
       avatar_url:
         description: The URL for this user's avatar image.
