--- a/packages/desktop/test/data/res/import-openapi/samples/petstore-v3.yaml
+++ b/packages/desktop/test/data/res/import-openapi/samples/petstore-v3.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.0"
+openapi: '3.0.0'
 info:
   version: 1.0.0
   title: Swagger Petstore v3
@@ -148,7 +148,7 @@ components:
       allOf:
         - $ref: '#/components/schemas/NewPet'
         - required:
-          - id
+            - id
           properties:
             id:
               type: integer
