--- a/packages/desktop/test/data/res/import-openapi/samples/slack-v2.yaml
+++ b/packages/desktop/test/data/res/import-openapi/samples/slack-v2.yaml
@@ -2113,7 +2113,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -2148,7 +2148,7 @@ paths:
                   purpose:
                     creator: ''
                     last_set: 0
-                    value: 'A place for non-work-related flimflam, faffing, hodge-podge or jibber-jabber you''d prefer to keep out of more focused work-related channels.'
+                    value: "A place for non-work-related flimflam, faffing, hodge-podge or jibber-jabber you'd prefer to keep out of more focused work-related channels."
                   topic:
                     creator: U0G9QF9C6
                     last_set: 1449709352
@@ -3107,7 +3107,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'A message''s `ts` value, uniquely identifying it within a channel'
+        - description: "A message's `ts` value, uniquely identifying it within a channel"
           in: query
           name: message_ts
           type: number
@@ -3314,7 +3314,7 @@ paths:
           in: header
           name: token
           type: string
-        - description: 'Text of the message to send. See below for an explanation of [formatting](#formatting). This field is usually required, unless you''re providing only `attachments` instead.'
+        - description: "Text of the message to send. See below for an explanation of [formatting](#formatting). This field is usually required, unless you're providing only `attachments` instead."
           in: formData
           name: text
           type: string
@@ -3420,7 +3420,7 @@ paths:
           in: formData
           name: unfurl_links
           type: boolean
-        - description: 'Text of the message to send. See below for an explanation of [formatting](#formatting). This field is usually required, unless you''re providing only `attachments` instead. Provide no more than 40,000 characters or [risk truncation](/changelog/2018-04-truncating-really-long-messages).'
+        - description: "Text of the message to send. See below for an explanation of [formatting](#formatting). This field is usually required, unless you're providing only `attachments` instead. Provide no more than 40,000 characters or [risk truncation](/changelog/2018-04-truncating-really-long-messages)."
           in: formData
           name: text
           type: string
@@ -3444,7 +3444,7 @@ paths:
           in: formData
           name: channel
           type: string
-        - description: 'Set your bot''s user name. Must be used in conjunction with `as_user` set to false, otherwise ignored. See [authorship](#authorship) below.'
+        - description: "Set your bot's user name. Must be used in conjunction with `as_user` set to false, otherwise ignored. See [authorship](#authorship) below."
           in: formData
           name: username
           type: string
@@ -3583,7 +3583,7 @@ paths:
           in: formData
           name: unfurl_links
           type: boolean
-        - description: 'Text of the message to send. See below for an explanation of [formatting](#formatting). This field is usually required, unless you''re providing only `attachments` instead. Provide no more than 40,000 characters or [risk truncation](/changelog/2018-04-truncating-really-long-messages).'
+        - description: "Text of the message to send. See below for an explanation of [formatting](#formatting). This field is usually required, unless you're providing only `attachments` instead. Provide no more than 40,000 characters or [risk truncation](/changelog/2018-04-truncating-really-long-messages)."
           in: formData
           name: text
           type: string
@@ -3999,7 +3999,7 @@ paths:
           in: formData
           name: attachments
           type: string
-        - description: 'New text for the message, using the [default formatting rules](/docs/formatting). It''s not required when presenting `attachments`.'
+        - description: "New text for the message, using the [default formatting rules](/docs/formatting). It's not required when presenting `attachments`."
           in: formData
           name: text
           type: string
@@ -4468,7 +4468,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -5237,7 +5237,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached. Must be an integer no larger than 1000.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached. Must be an integer no larger than 1000."
           in: query
           name: limit
           type: integer
@@ -5307,7 +5307,7 @@ paths:
                   purpose:
                     creator: ''
                     last_set: 0
-                    value: 'A place for non-work-related flimflam, faffing, hodge-podge or jibber-jabber you''d prefer to keep out of more focused work-related channels.'
+                    value: "A place for non-work-related flimflam, faffing, hodge-podge or jibber-jabber you'd prefer to keep out of more focused work-related channels."
                   topic:
                     creator: ''
                     last_set: 0
@@ -5404,7 +5404,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -5759,7 +5759,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -6990,7 +6990,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -8401,7 +8401,7 @@ paths:
           in: query
           name: exclude_archived
           type: boolean
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -9304,7 +9304,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -10126,7 +10126,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -11075,7 +11075,7 @@ paths:
           in: formData
           name: name
           type: string
-        - description: 'File comment to add reaction to. Now that [file threads](/changelog/2018-05-file-threads-soon-tread#whats_changed) work the way you''d expect, this argument is deprecated. Specify the timestamp and channel of the message associated with a file instead.'
+        - description: "File comment to add reaction to. Now that [file threads](/changelog/2018-05-file-threads-soon-tread#whats_changed) work the way you'd expect, this argument is deprecated. Specify the timestamp and channel of the message associated with a file instead."
           in: formData
           name: file_comment
           type: string
@@ -11087,7 +11087,7 @@ paths:
           in: header
           name: token
           type: string
-        - description: 'File to add reaction to. Now that [file threads](/changelog/2018-05-file-threads-soon-tread#whats_changed) work the way you''d expect, this argument is deprecated. Specify the timestamp and channel of the message associated with a file instead.'
+        - description: "File to add reaction to. Now that [file threads](/changelog/2018-05-file-threads-soon-tread#whats_changed) work the way you'd expect, this argument is deprecated. Specify the timestamp and channel of the message associated with a file instead."
           in: formData
           name: file
           type: string
@@ -11340,7 +11340,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -12397,7 +12397,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -14035,7 +14035,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn''t been reached. Must be an integer no larger than 1000.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the list hasn't been reached. Must be an integer no larger than 1000."
           in: query
           name: limit
           type: integer
@@ -14105,7 +14105,7 @@ paths:
                   purpose:
                     creator: ''
                     last_set: 0
-                    value: 'A place for non-work-related flimflam, faffing, hodge-podge or jibber-jabber you''d prefer to keep out of more focused work-related channels.'
+                    value: "A place for non-work-related flimflam, faffing, hodge-podge or jibber-jabber you'd prefer to keep out of more focused work-related channels."
                   topic:
                     creator: ''
                     last_set: 0
@@ -14393,7 +14393,7 @@ paths:
                   - team
                 type: object
               - additionalProperties: false
-                description: 'Schema for ''identity.basic,identity.email'' scopes'
+                description: "Schema for 'identity.basic,identity.email' scopes"
                 properties:
                   ok:
                     $ref: '#/definitions/defs_ok_true'
@@ -14426,7 +14426,7 @@ paths:
                   - team
                 type: object
               - additionalProperties: false
-                description: 'Schema for ''identity.basic,identity.avatar'' scopes'
+                description: "Schema for 'identity.basic,identity.avatar' scopes"
                 properties:
                   ok:
                     $ref: '#/definitions/defs_ok_true'
@@ -14479,7 +14479,7 @@ paths:
                   - team
                 type: object
               - additionalProperties: false
-                description: 'Schema for ''identity.basic,identity.team'' scopes'
+                description: "Schema for 'identity.basic,identity.team' scopes"
                 properties:
                   ok:
                     $ref: '#/definitions/defs_ok_true'
@@ -14725,7 +14725,7 @@ paths:
           in: query
           name: token
           type: string
-        - description: 'The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn''t been reached.'
+        - description: "The maximum number of items to return. Fewer than the requested number of items may be returned, even if the end of the users list hasn't been reached."
           in: query
           name: limit
           type: integer
@@ -15496,7 +15496,7 @@ paths:
         - users
 definitions:
   blocks:
-    description: 'This is a very loose definition, in the future, we''ll populate this with deeper schema in this definition namespace.'
+    description: "This is a very loose definition, in the future, we'll populate this with deeper schema in this definition namespace."
     items:
       additionalProperties: true
       properties:
