--- a/packages/desktop/test/data/res/import-openapi/samples/youtube-v3.yaml
+++ b/packages/desktop/test/data/res/import-openapi/samples/youtube-v3.yaml
@@ -423,7 +423,7 @@ paths:
       tags:
         - groups
     put:
-      description: 'Modifies a group. For example, you could change a group''s title.'
+      description: "Modifies a group. For example, you could change a group's title."
       operationId: youtubeAnalytics.groups.update
       parameters:
         - description: |-
@@ -835,7 +835,7 @@ components:
           description: The ID that YouTube uses to uniquely identify the group.
           type: string
         kind:
-          description: 'Identifies the API resource''s type. The value will be `youtube#group`.'
+          description: "Identifies the API resource's type. The value will be `youtube#group`."
           type: string
         snippet:
           $ref: '#/components/schemas/GroupSnippet'
@@ -886,7 +886,7 @@ components:
             playlist, or asset ID.
           type: string
         kind:
-          description: 'Identifies the API resource''s type. The value will be `youtube#groupItem`.'
+          description: "Identifies the API resource's type. The value will be `youtube#groupItem`."
           type: string
         resource:
           $ref: '#/components/schemas/GroupItemResource'
